# GameEngine

./: CMakeLists.txt  README.md
cmake/: ConfigureDirectXLibraries.cmake  ConfigureGLSLHeaders.cmake  ConfigureHLSLHeaders.cmake  ConfigureOpenGLLibraries.cmake  DetectDistro.cmake  DetectSystem.cmake  FindAntTweakBar.cmake  FindGLFW.cmake  FindGLM.cmake  FindSOIL.cmake  GLSLShaderHeader.h.in  HLSLShaderHeader.h.in  RemoveUnusedSrcs.cmake  ShaderHeader.h.in  embedfile.cpp
debug_includes/: FileHelper.cpp  FileHelper.h
src/: Game.cpp  Game.h
src/Abstracts/: AbstractGame.cpp  AbstractGame.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  GameState.cpp  GameState.h  InputManager.cpp  InputManager.h  Material.cpp  Material.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  ShaderProgram.cpp  ShaderProgram.h
src/DirectX/: DirectXGame.cpp  DirectXGame.h  DirectXInputManager.cpp  DirectXInputManager.h  DirectXMaterial.cpp  DirectXMaterial.h  DirectXRenderer.cpp  DirectXRenderer.h  DirectXResourceManager.cpp  DirectXResourceManager.h  DirectXResources.h
src/DirectX/MSDN/: WICTextureLoader.cpp  WICTextureLoader.h
src/DirectX/Shaders/: DirectXShader.cpp  DirectXShader.h
src/DirectX/Shaders/HLSL/: DiscardPS.hlsl  InterpolatedDepthPS.hlsl  InterpolatedVS.hlsl
src/GameObjects/: Camera.cpp  Camera.h  CompositeObject.cpp  CompositeObject.h  Light.cpp  Light.h  MeshObject.cpp  MeshObject.h
src/Helpers/: Dirty.cpp  Dirty.h  MeshFactory.cpp  MeshFactory.h  ModelFactory.cpp  ModelFactory.h  Preprocessors.h  Stats.cpp  Stats.h  TweakBar.cpp  TweakBar.h
src/Interfaces/: IGame.h  IGameObject.h  IGameState.h  IGlobalTimer.h  IInputManager.h  IMaterial.h  IRenderer.h  IResourceManager.h  IShaderManager.h  IShaderProgram.h  ITimer.h
src/OpenGL/: OpenGLGame.cpp  OpenGLGame.h  OpenGLInputManager.cpp  OpenGLInputManager.h  OpenGLRenderer.cpp  OpenGLRenderer.h  OpenGLResourceManager.cpp  OpenGLResourceManager.h
src/OpenGL/Shaders/: OpenGLShader.cpp  OpenGLShader.h
src/OpenGL/Shaders/GLSL/: InterpolatedDepthPS.glsl  InterpolatedPS.glsl  InterpolatedVS.glsl  RedPS.glsl  SimpleVS.glsl  TexturedPS.glsl  TexturedVS.glsl  TransparentTexturedPS.glsl  UniformScaleVS.glsl
src/Shaders/: DepthShader.cpp  DepthShader.h  InstancedShader.cpp  InstancedShader.h  MaterialMeshShader.cpp  MaterialMeshShader.h  MeshShader.cpp  MeshShader.h  PsychedaelicShader.cpp  PsychedaelicShader.h  ShaderManager.cpp  ShaderManager.h  TextureShader.cpp  TextureShader.h  TransparentTextureShader.cpp  TransparentTextureShader.h
src/Structs and Enums/: AlphaState.h  CullState.h  DepthState.h  Event.h  RasterState.h  SamplerState.h  SamplerType.h  Shader.h  ShaderType.h  TextureType.h
src/Threads/: AffinityThread.cpp  AffinityThread.h  NetworkingThread.cpp  NetworkingThread.h  SimulationThread.cpp  SimulationThread.h  Thread.cpp  Thread.h  ThreadManager.cpp  ThreadManager.h  VisualizationThread.cpp  VisualizationThread.h
src/Timers/: MachGlobalTimer.h  PosixGlobalTimer.cpp  PosixGlobalTimer.h  Timer.cpp  Timer.h  WindowsGlobalTimer.cpp  WindowsGlobalTimer.h
test/: CMakeLists.txt  main.cpp
test/cmake/: FindCatch.cmake  GetCatch.cmake
test/src/OpenGL/: OpenGLGameTest.cpp
